# Forge-Focus

./: README.md  pyproject.toml  start.bat  start.ps1  test_blocker_warning.py  test_installation.py
extension/chrome/: background.js  blocked.html  content.js  manifest.json  popup.html  popup.js
src/focusforge/: __init__.py  main.py
src/focusforge/api/: __init__.py  server.py
src/focusforge/database/: __init__.py  models.py
src/focusforge/services/: __init__.py  app_tracker.py  blocker.py  scheduler.py  time_limits.py
src/focusforge/ui/: __init__.py  main_window.py
src/focusforge/utils/: analytics.py  helpers.py
