[project]
name = "focusforge"
version = "0.1.0"
description = "Cross-platform productivity app with time tracking and focus modes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flet[all]==0.28.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "psutil>=6.1.0",
    "apscheduler>=3.10.4",
    "plotly>=5.24.1",
    "python-dateutil>=2.9.0",
    "pywin32>=307; sys_platform == 'win32'",
    "pygetwindow>=0.0.9; sys_platform == 'win32'",
    "python-xlib>=0.33; sys_platform == 'linux'",
    "pyobjc-framework-Cocoa>=10.3.1; sys_platform == 'darwin'",
    "pydantic>=2.9.2",
    "websockets>=13.1",
]

[project.scripts]
focusforge = "focusforge.main:main"
focusforge-api = "focusforge.api.server:start"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
